input overflow ios issues

--- a/task-7/style.css
+++ b/task-7/style.css
@@ -62,3 +62,8 @@ form input.operatorac {
 i {
   margin-right: 10px;
 }
+@media screen and (max-width: 500px) {
+  form .display input {
+   font-size: 25px;
+  }
+}
